fix: ortographe & edge scrollbar again and again

--- a/src/components/molecules/Landing/Expertise.astro
+++ b/src/components/molecules/Landing/Expertise.astro
@@ -10,13 +10,12 @@ import Desktop from "@images/hero/computer-dynamic-clay.webp"
     <div>
         <h2 class=" text-3xl font-semibold mb-5">Notre expertise</h2>
         <p>
-            L’expertise de loak.studio est basée sur les outils et technologies les plus récentes et performante. Nous
+            L’expertise de loak.studio est basée sur les outils et technologies les plus récentes et performantes. Nous
             utilisons, par exemple, Figma pour la création de maquette ainsi que pour le prototypage. Cela nous permet
             d’anticiper le rendu d’un projet et de gagner à la fois en temps de développement et en finesse.
         </p>
         <p>
             Nous avons à coeur d’améliorer le web en profondeur en y apportant notre vision et nos compétences
-
         </p>
     </div>
 </section>
