--- a/src/components/molecules/Landing/Contact.astro
+++ b/src/components/molecules/Landing/Contact.astro
@@ -12,8 +12,7 @@ import Button from "@components/atoms/Button.astro";
         </figure>
         <div class="space-y-4 max-w-md">
             <h2 class="font-semibold text-3xl">Prêt à lancer votre projet?</h2>
-            <p class="">Une idée de projet web ? Un site vitrine ?Un e-commerce ? 
-                Prenons contact et parlons-en !</p>
+            <p class="">Une idée de projet web? Un site vitrine? Un e-commerce? Prenons contact et parlons-en !</p>
             <Button extern={true} href="https://contact.loak.studio">Planifier un appel</Button>
         </div>
     </section>
