--- a/src/components/organisms/Footer.astro
+++ b/src/components/organisms/Footer.astro
@@ -48,12 +48,12 @@ const links = [
         <div class="max-w-[64ch] leading-7 space-y-7">
             <p>
                 loak.studio est une agence web située à Tournai en Belgique. Notre expertise se base sur une équipe de
-                trois jeunes chacun spécialiste dans leur domaine. Nous disposons d'un savoir faire dans le domaine du
+                trois jeunes chacun spécialiste dans leur domaine. Nous disposons d'un savoir-faire dans le domaine du
                 développement web et sommes disposés à répondre à vos demandes afin de réaliser des applications web,
                 sites internet, e-commerce... et bien plus.
             </p>
             <p>
-                Notre équipe est composées de 3 personnes, un UX Design, qui va comprendre les besoins de vos
+                Notre équipe est composée de 3 personnes, un UX Design, qui va comprendre les besoins de vos
                 utilisateurs, et deux développeurs qui utilisent les dernières technologies dans le domaine de la
                 création de site internet afin d'apporter la réponse la plus rapide et efficace à vos problématiques.
             </p>
