--- a/src/components/molecules/Landing/References.astro
+++ b/src/components/molecules/Landing/References.astro
@@ -10,7 +10,7 @@ const comments = await datacomments.json()
 
 <section id="references" data-references class="max-w-6xl w-full mx-auto px-4 lg:px-0">
     <h2 class="mb-12 text-primary-800 text-3xl font-semibold text-center">Nos références</h2>
-    <ul class="opacity-0 items-center flex md:justify-center gap-16 overflow-scroll" style="-ms-overflow-style: none;">
+    <ul class="opacity-0 items-center flex md:justify-center gap-16 overflow-x-scroll">
         {references.stories.map(client=>
         <li class=" shrink-0 lg:shrink">
             <figure class="grayscale transition max-w-[200px]">
