--- a/src/components/organisms/Nav.astro
+++ b/src/components/organisms/Nav.astro
@@ -4,7 +4,7 @@ import Logo from "@components/atoms/Logo.astro";
 ---
 
 <header class="max-w-5xl  w-full mx-auto my-4 md:my-12 px-4 lg:px-0">
-    <a title="Retour à l'accueil" class="block" href="/">
+    <a title="Retour à l'accueil" class="inline-block" href="/">
         <Logo />
     </a>
 </header>
