fix(reinsurance): orthographe

--- a/src/components/molecules/Landing/Reinsurance.astro
+++ b/src/components/molecules/Landing/Reinsurance.astro
@@ -6,7 +6,7 @@ const cards = [
     {
         icon: Puzzle,
         title: 'Sur mesure',
-        text: 'Un bouton ici? Un animation là? Aucun soucis, tout est fait main.'
+        text: 'Un bouton ici? Une animation là? Aucun soucis, tout est fait main.'
     },
     {
         icon: Lock,
