feat: VERIFIED AGENCY TQT

--- a/src/components/organisms/Footer.astro
+++ b/src/components/organisms/Footer.astro
@@ -85,9 +85,12 @@ const links = [
 </div>
 
 <footer class="bg-primary-700">
-    <div class="max-w-5xl mx-auto py-7 flex justify-center text-white">
+    <div class="max-w-5xl flex-col md:flex-row items-center gap-4 mx-auto py-7 flex justify-center text-white">
         <span>
             &copy; {date.getFullYear()} loak.studio - Tous droits réservés
+        </span>
+        <span>
+            <a target="_blank" href="https://www.sortlist.be/fr/agency/loak-studio" style="display:inline-block; width:140px; height:40px;"><img src="https://core.sortlist.com//_/apps/core/images/badges-fr/badge-flag-white-dark-xs.svg" alt="flag"/></a>
         </span>
     </div>
 </footer>
