style(blog): spacing under title

--- a/src/components/molecules/BlogPost/CurrentBlogPostPreview.astro
+++ b/src/components/molecules/BlogPost/CurrentBlogPostPreview.astro
@@ -11,7 +11,7 @@ const image = getWidthAndHeight(picture.filename)
         <Image file={picture.filename} classes="object-cover rounded-md object-center h-full w-full"/>
     </figure>
     <div class="">
-        <h2 class="text-3xl">{title}</h2>
+        <h2 class="text-3xl mb-4">{title}</h2>
         <p class="line-clamp-3">{text}</p>
         <ReadMore href={href} />
     </div>
