fix(references): sortlist badge size

--- a/src/components/molecules/Landing/References.astro
+++ b/src/components/molecules/Landing/References.astro
@@ -39,5 +39,5 @@ const comments = await datacomments.json()
     </ul>
     <p class="text-center mt-6 flex flex-col items-center gap-4 text-primary-600 hover:underline">
     
-        <a target="_blank"  href="https://www.sortlist.be/fr/agency/loak-studio"style="display:inline-block; width:210px; height:60px;"><img src="https://core.sortlist.com//_/apps/core/images/badges-fr/badge-stars-black-light-xl.svg" alt="stars"/></a>    </p>
+        <a target="_blank"  href="https://www.sortlist.be/fr/agency/loak-studio"style="display:inline-block; width:210px; height:60px;"><img height="60px" width="210px"  loading="lazy" src="https://core.sortlist.com//_/apps/core/images/badges-fr/badge-stars-black-light-xl.svg" alt="stars"/></a>    </p>
 </section>
