fix(footer): sortlist badge size

--- a/src/components/organisms/Footer.astro
+++ b/src/components/organisms/Footer.astro
@@ -90,7 +90,7 @@ const links = [
             &copy; {date.getFullYear()} loak.studio - Tous droits réservés
         </span>
         <span>
-            <a target="_blank" href="https://www.sortlist.be/fr/agency/loak-studio" style="display:inline-block; width:140px; height:40px;"><img src="https://core.sortlist.com//_/apps/core/images/badges-fr/badge-flag-white-dark-xs.svg" alt="flag"/></a>
+            <a target="_blank" href="https://www.sortlist.be/fr/agency/loak-studio" style="display:inline-block; width:140px; height:40px;"><img height="40px" width="140px" src="https://core.sortlist.com//_/apps/core/images/badges-fr/badge-flag-white-dark-xs.svg" alt="flag"/></a>
         </span>
     </div>
 </footer>
